Update tracing Fix https://github.com/wso2/micro-integrator/issues/2651
